<resources>
    <string-array name="sort_types">
        <item>Kolejności</item>
        <item>Nazwy</item>
        <item>Ceny</item>
    </string-array>

    <string-array name="filter_types">
        <item>Wszystkie</item>
        <item>Do kupienia</item>
    </string-array>

    <string-array name="tab_titles">
        <item>Popularne</item>
        <item>Ulubione</item>
        <item>Nowy Produkt</item>
    </string-array>

    <string name="app_name">GL_ShoppingList</string>
    <string name="title_activity_main_list">MainListActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name_hint">Nazwa</string>
    <string name="price_hint">Cena</string>
    <string name="amount_hint">Ilość</string>
    <string name="favourite">Ulubione</string>
    <string name="confirm_text_add">DODAJ</string>
    <string name="add_list">Dodaj Listę</string>
    <string name="confirm">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="change_list_name">Zmień Nazwę Listy</string>
    <string name="delete">Usuń</string>
    <string name="delete_list">Usuń listę</string>
    <string name="delete_all_lists">Usuń wszystkie listy</string>
    <string name="delete_list_confirmation">Jesteś pewien, że chcesz usunąć listę %s?</string>
    <string name="delete_all_lists_confirmation">Jesteś pewien, że chcesz usunąć wszystkie listy?</string>
    <string name="sort_info_text">Sortuj według:</string>
    <string name="add_product">Dodaj produkt</string>
    <string name="sort">Sortowanie</string>
    <string name="filter">Filtrowanie</string>
    <string name="filter_info_text">Pokaż produkty:</string>
    <string name="cant_add_product">Nie można dodać produktu</string>
    <string name="product_already_on_list">Ten produkt znajduje się już na tej liście.</string>
    <string name="milk">Mleko</string>
    <string name="bread">Chleb</string>
    <string name="eggs">Jajka</string>
    <string name="potatoes">Ziemniaki</string>
    <string name="cheese">Ser</string>
    <string name="butter">Masło</string>
    <string name="field_cannot_be_empty">To pole nie może być puste</string>
    <string name="list_plus_int" formatted="false">Lista %d</string>
    <string name="string_plus_currency" formatted="false">%szł</string>
    <string name="price_info_string" formatted="false">(%s x %szł)</string>
    <string name="valid_input_number_values">Podaj wartość między 0 a 1000</string>
    <string name="popular">Popularne</string>
    <string name="new_product">Nowy Produkt</string>
    <string name="edit">Edytuj</string>
    <string name="cant_add_catalog">Nie można dodać listy</string>
    <string name="list_already_exist">Istnieje już lista o takiej nazwie.</string>

</resources>
